[gd_scene load_steps=12 format=2]

[ext_resource path="res://Cenas/Player.gd" type="Script" id=1]
[ext_resource path="res://AtlasTexture/Player_walk1.tres" type="Texture" id=2]
[ext_resource path="res://AtlasTexture/Player.tres" type="Texture" id=3]
[ext_resource path="res://AtlasTexture/Player_walk2.tres" type="Texture" id=4]
[ext_resource path="res://Sprites/light.jpg" type="Texture" id=5]
[ext_resource path="res://Sprites/Sons/Sounds_jump1.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Sons/enemy_hit.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Sons/mixkit-positive-game-alert-3151.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.5
height = 5.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Animacao" type="AnimatedSprite" parent="."]
position = Vector2( 0, 6 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "jump"

[node name="Colisao" type="CollisionShape2D" parent="."]
position = Vector2( -2, 8 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -200
limit_top = -50
limit_right = 1500
limit_bottom = 600

[node name="Notificador" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2, 7 )
scale = Vector2( 1.025, 1.65 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, 8 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 1.81333, 1.78667 )
texture = ExtResource( 5 )
energy = 1.5

[node name="AudioPulo" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -13 )
stream = ExtResource( 6 )
volume_db = -23.0

[node name="AudioMorteInimigo" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -15 )
stream = ExtResource( 7 )
volume_db = -10.0

[node name="AudioMorte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="screen_exited" from="Notificador" to="." method="_on_Notificador_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
